R53Test/two-servers-Infra.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  ABCMoodle:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.10.0/24
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: ABC-Moodle

  ABCMoodlePrivateSub01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ABCMoodle
      CidrBlock: 192.168.10.0/28
      AvailabilityZone: ap-southeast-1a
      Tags:
        - Key: Name
          Value: ABC-Moodle-Private-Sub1

  ABCMoodlePrivateSub02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ABCMoodle
      CidrBlock: 192.168.10.16/28
      AvailabilityZone: ap-southeast-1b
      Tags:
        - Key: Name
          Value: ABC-Moodle-Private-Sub2

  ABCMoodlePublicSub01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ABCMoodle
      CidrBlock: 192.168.10.32/28
      AvailabilityZone: ap-southeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ABC-Moodle-Public-Sub1

  ABCMoodlePublicSub02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ABCMoodle
      CidrBlock: 192.168.10.48/28
      AvailabilityZone: ap-southeast-1b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ABC-Moodle-Public-Sub1

  ABCMoodleWebSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Web Servers
      GroupName: ABCMoodleWebSG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: ABC-Moodle-Web-SG
      VpcId: !Ref ABCMoodle

  WebServer01NI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: ABC Moodle Web Server 01
      GroupSet:
        - !Ref ABCMoodleWebSG
      PrivateIpAddress: 192.168.10.37
      SubnetId: !Ref ABCMoodlePublicSub01
      Tags:
        - Key: Name
          Value: ABC-Moodle-WebServer-01

  WebServer02NI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: ABC Moodle Web Server 02
      GroupSet:
        - !Ref ABCMoodleWebSG
      PrivateIpAddress: 192.168.10.54
      SubnetId: !Ref ABCMoodlePublicSub02
      Tags:
        - Key: Name
          Value: ABC-Moodle-WebServer-02

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ABC-Moodle-IG

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ABCMoodle
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ABCMoodle
      Tags:
        - Key: Name
          Value: ABC-Moodle-RouteTable

  RouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ABCMoodlePublicSub01
      RouteTableId: !Ref PublicRouteTable

  RouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ABCMoodlePublicSub02
      RouteTableId: !Ref PublicRouteTable

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  WebServer01:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-southeast-1a
      ImageId: ami-0497a974f8d5dcef8
      InstanceType: t2.micro
      KeyName: ABC-common
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref WebServer01NI
          DeviceIndex: '0'
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash
          sudo apt update -y
          sudo apt install apache2 -y
          sudo systemctl start apache2
          sudo systemctl enable apache2          
      Tags:
        - Key: Name
          Value: ABC Moodle Web Server 01

  WebServer02:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-southeast-1b
      ImageId: ami-0497a974f8d5dcef8
      InstanceType: t2.micro
      KeyName: ABC-common
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref WebServer02NI
          DeviceIndex: '0'
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash
          sudo apt update -y
          sudo apt install apache2 -y
          sudo systemctl start apache2
          sudo systemctl enable apache2
      Tags:
        - Key: Name
          Value: ABC Moodle Web Server 02
